--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
             <br />
         </div>
         <div class="main-text">
-            <h3>Registrations open the 15th of May.</h3>
+            <h3>Registration opens the 15th of May.</h3>
         </div>
         <div class="center">
             <h2>Sponsors</h2>
