--- a/source/layout.html
+++ b/source/layout.html
@@ -72,7 +72,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">Competition organized by research groups afferents to the <a href="http://www.necst.it">NECSTLab</a> and supported by the CINI Cyber Security National <span class="pull-right">~ design by <a href="https://twitter.com/_ocean">ocean</a>, 3d logo by <a href="http://https//it.linkedin.com/pub/ilaria-scarcia/25/686/510/en">Ila9</a></span></p>
+            <p class="text-muted">Competition organized by the research groups of <a href="http://www.necst.it">NECSTLab</a> and supported by the CINI Cyber Security National <span class="pull-right">~ design by <a href="https://twitter.com/_ocean">ocean</a>, 3d logo by <a href="http://https//it.linkedin.com/pub/ilaria-scarcia/25/686/510/en">Ila9</a></span></p>
         </div>
     </footer>
     <script src="js/jquery.js"></script>
