--- a/source/index.html
+++ b/source/index.html
@@ -78,12 +78,12 @@
             <div class="main-text">
             We kindly thank our sponsors for supporting the PoliCTF:
             <div>
-            <div class="col-xs-6 sponsor">
+            <div class="col-xs-12 col-sm-6 sponsor">
                 <a class="thumbnail" href="http://www.reply.eu/en/topics/security/">
                     <img src="images/sponsor/reply_cv.png" alt="Reply Communication Valley" class="img-responsive" />
                 </a>
             </div>
-            <div class="col-xs-6 sponsor">
+            <div class="col-xs-12 col-sm-6 sponsor">
                 <a class="thumbnail" href="http://www.consorzio-cini.it/index.php/en/">
                     <img src="images/sponsor/cini.png" alt="Consorzio interuniversitario nazionale per l'informatica" class="img-responsive" />
                 </a>
