music is opt-in now, load twitter feed on modal load

--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
     <div class="col-xs-12" id="democanvas"></div>
     <div class="col-xs-12 text-center">
         <button id="player" type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-            <span class="glyphicon glyphicon-pause" aria-hidden="true"> music</span>
+            <span class="glyphicon glyphicon-play" aria-hidden="true"> music</span>
         </button>
         <button type="button" class="btn btn-info btn-sm" aria-label="Left Align" onclick="fullscr('democanvas')">
             <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"> fullscreen</span>
