--- a/source/layout.html
+++ b/source/layout.html
@@ -42,7 +42,7 @@
                     </li>
                     -->
                     <li>
-                        <a href="javascript:onclick($('#news_tweets').modal());">News</a>
+                        <a href="javascript:onclick(openmodalnews())">News</a>
                     </li>
                     <li>
                         <a class="nolink" href="#" data-width="600px" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Registration opens on the 15th of May check out later please! :)"><del>Registration</del></a>
@@ -61,8 +61,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body">
-                <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/towerofhanoi" data-widget-id="587685771290738688" data-chrome="nofooter noheader noscrollbar transparent" width="500">Tweets by @towerofhanoi</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
               </div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
@@ -83,8 +82,14 @@
                 $('.nolink').popover('hide');
             }, 5000);
         });
-
+        $("#news_tweets").on('shown.bs.modal', function() {
+            $(this).find(".modal-content").load( "news.html" );
+        })
+        function openmodalnews(){
+            $('#news_tweets').modal()
+        }
     </script>
+
     {% block script %}{% endblock %}
 
 </body>
