--- a/source/layout.html
+++ b/source/layout.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <span class="navbar-brand"><a href="index.html"><img src="images/logo.png" />PoliCTF 2015</a></span>
+                <span class="navbar-brand"><a href="index.html"><img src="images/logo.png" /><span>PoliCTF</span>2015</a></span>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
