Modifiche grafiche e aggiunta di registration.html... Non funziona ancora l'invio ajax...

--- a/source/index.html
+++ b/source/index.html
@@ -32,15 +32,15 @@
 {% block content %}
 <div class="row marginbottom">
     <div class="col-xs-12 col-sm-12 col-md-7 demo_block">
-    <div class="col-xs-12" id="democanvas"></div>
-    <div class="col-xs-12 text-center">
-        <button id="player" type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-            <span class="glyphicon glyphicon-play" aria-hidden="true"> music</span>
-        </button>
-        <button type="button" class="btn btn-info btn-sm" aria-label="Left Align" onclick="fullscr('democanvas')">
-            <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"> fullscreen</span>
-        </button>
-    </div>
+        <div class="col-xs-12" id="democanvas"></div>
+        <div class="col-xs-12 text-center">
+            <button id="player" type="button" class="btn btn-info btn-sm" aria-label="Left Align">
+                <span class="glyphicon glyphicon-play" aria-hidden="true"> Music</span>
+            </button>
+            <button type="button" class="btn btn-info btn-sm" aria-label="Left Align" onclick="fullscr('democanvas')">
+                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"> Fullscreen</span>
+            </button>
+        </div>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-5 main_block">
         <div class="main-text">
