--- a/source/layout.html
+++ b/source/layout.html
@@ -45,7 +45,7 @@
                         <a href="javascript:onclick(openmodalnews())">News</a>
                     </li>
                     <li>
-                        <a class="nolink" href="#" data-width="600px" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Registration opens on the 15th of May check out later please! :)"><del>Registration</del></a>
+                        <a href="registration.html">Registration</a>
                     </li>
                     <li>
                         <a href="mailto:info@polictf.it"><span class="glyphicon glyphicon-envelope"></span></a>
@@ -71,7 +71,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">Competition organized by the research groups of <a href="http://www.necst.it">NECSTLab</a> and supported by the CINI Cyber Security National <span class="pull-right">~ design: <a href="https://github.com/JWuCines">jiang.wu</a> &amp; <a href="https://twitter.com/_ocean">ocean</a> || 3d logo: <a href="http://https//it.linkedin.com/pub/ilaria-scarcia/25/686/510/en">Ila9</a></span></p>
+            <p class="text-muted">Competition organized by the research groups of <a href="http://www.necst.it">NECSTLab</a> and supported by the CINI Cyber Security National Lab <span class="pull-right">~ design: <a href="https://github.com/JWuCines">jiang.wu</a> &amp; <a href="https://twitter.com/_ocean">ocean</a> || 3d logo: <a href="http://https//it.linkedin.com/pub/ilaria-scarcia/25/686/510/en">Ila9</a></span></p>
         </div>
     </footer>
     <script src="js/jquery.js"></script>
