No Registration Link

--- a/source/layout.html
+++ b/source/layout.html
@@ -45,7 +45,7 @@
                         <a href="javascript:onclick(openmodalnews())">News</a>
                     </li>
                     <li>
-                        <a href="registration.html">Registration</a>
+                        <a class="nolink" href="#" data-width="600px" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Registration opens on the 15th of May check out later please! :)"><del>Registration</del></a>
                     </li>
                     <li>
                         <a href="mailto:info@polictf.it"><span class="glyphicon glyphicon-envelope"></span></a>
