--- a/source/registration.html
+++ b/source/registration.html
@@ -111,7 +111,7 @@ $('#reg-form').validator().on('submit', function (e) {
             success: function(data_r) {
 				if(data_r.done) {
 					$("#reg-error").addClass("ok");
-					$("#reg-error").text( ">> Registration successful. An e-mail is sent to you to confirm the registration.");
+					$("#reg-error").html( ">> Registration successful. <br /> An e-mail is sent to you to confirm the registration.");
 					$("html, body").animate({ scrollTop: 0 }, "slow");
 					$("#reg-form").hide()
 				}
@@ -119,9 +119,9 @@ $('#reg-form').validator().on('submit', function (e) {
 					var error_t = "";
 					$("#reg-error").addClass("error");
 					for (error_elm in data_r.errors) {
-						error_t = error_t + "<br /> - " + data_r.errors[error_elm];
+						error_t = error_t + "<br /> - " + data_r.errors[error_elm].trim();
 					}
-					$("#reg-error").html(">> Some data are incorrect: <div style=\"font-size: 8pt;\">" + error_t + "</div>" );
+					$("#reg-error").html(">> Some data are incorrect: <div style=\"font-size: 9pt;\">" + error_t + "</div>" );
 					$("html, body").animate({ scrollTop: 0 }, "slow");
 				}
             },
