--- a/source/registration.html
+++ b/source/registration.html
@@ -36,8 +36,8 @@
             <div id="reg-error"></div>
             <form class="form" id="reg-form" data-toggle="validator">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" pattern="^([_A-z0-9]){3,}$" maxlength="20" id="username" placeholder="Username" data-error required>
+                    <label for="username">Team name</label>
+                    <input type="text" class="form-control" pattern="^([_A-z0-9]){3,}$" maxlength="20" id="username" placeholder="TeamName" data-error required>
                     <span class="help-block">Up to 20 letters, numbers and underscores</span>
                 </div>
                 <div class="form-group">
@@ -100,7 +100,7 @@ $('#reg-form').validator().on('submit', function (e) {
         // Use Ajax to submit form data
         $.ajax({
             method: "POST",
-            url: "http://scoreboard.polictf.local.necst.it/registration/subscribe",
+            url: "{{ registration_url }}",
             data: { name:  $("#username").val(), 
                     email: $("#email_address").val(),
                     password: $("#password_first").val(),
@@ -127,7 +127,7 @@ $('#reg-form').validator().on('submit', function (e) {
             },
             error: function() { 
                $("#reg-error").addClass("error");
-			   $("#reg-error").text( ">> Technical error occurs. Please retry.");
+			   $("#reg-error").text( ">> Technical error. Please retry later.");
 			   $("html, body").animate({ scrollTop: 0 }, "slow");
             }
         });
