--- a/source/registration.html
+++ b/source/registration.html
@@ -43,7 +43,7 @@
                 <div class="form-group">
                     <label for="password_first">Password</label>
                     <input type="password" data-minlength="8" class="form-control" id="password_first" placeholder="Password" required>
-                    <span class="help-block">Minimum of 8 characters</span>
+                    <span class="help-block">Minimum of 8 characters, containing letters and numbers</span>
                 </div>
                 <div class="form-group">
                     <label for="password_check">Repeat Password</label>
@@ -121,7 +121,7 @@ $('#reg-form').validator().on('submit', function (e) {
 					for (error_elm in data_r.errors) {
 						error_t = error_t + "<br /> - " + data_r.errors[error_elm].trim();
 					}
-					$("#reg-error").html(">> Some data are incorrect: <div style=\"font-size: 9pt;\">" + error_t + "</div>" );
+					$("#reg-error").html(">> Some data isn't correct: <div style=\"font-size: 9pt;\">" + error_t + "</div>" );
 					$("html, body").animate({ scrollTop: 0 }, "slow");
 				}
             },
