--- a/source/registration.html
+++ b/source/registration.html
@@ -71,7 +71,7 @@
                 <div class="form-group">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" id="check_rules" data-error="You must accept the <a href="rules.html" target="_blank">rules!</a>" required>I accept the rules
+                            <input type="checkbox" id="check_rules" data-error="You must accept the rules ;)" target="_blank">rules!</a>" required>I accept the <a href="rules.html" target="_blank">rules</a>
                             <div class="help-block with-errors"></div>
                         </label>
                     </div>
