added reg ok/ko pages

--- a/source/reg_ok.html
+++ b/source/reg_ok.html
@@ -31,19 +31,7 @@
 
 {% block content %}
 <div>
-<h1>Rules</h1>
-<ul>
-<li>No limitations on team size</li>
-<li>NO solution sharing is allowed</li>
-<li>Attacking our infrastructure is prohibited (only attack designated services)</li>
-<li>Attacking other teams is prohibited</li>
-<li>Do not DOS, it will result in an immediate ban.</li>
-<li>Should you find any vulnerability/bug in our scoreboard or infrastructure please report it to us, bonus points will be awarded</li>
-<li>If yout think you've got a valid flag but the scoreboard is not accepting it please contact us.</li>
-<li>The first 3 solvers for challenges get bonus points. 6%, 4% and 2% of the challenge value.</li>
-<li>TowerOfHanoi affiliated individuals or groups cannot claim prizes</li>
-<li>to claim prizes you will need to have a valid point-of-contact</li>
-</ul>
+<h1>Your team successfully registered for PoliCTF2015</h1>
 </div>
 {% endblock %}
 
