--- a/source/registration.html
+++ b/source/registration.html
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <label for="username">Team name</label>
                     <input type="text" class="form-control" pattern="^([_A-z0-9]){3,}$" maxlength="20" id="username" placeholder="TeamName" data-error required>
-                    <span class="help-block">Up to 20 letters, numbers and underscores</span>
+                    <span class="help-block">Min 3 and Up to 20 characters [_A-z0-9]</span>
                 </div>
                 <div class="form-group">
                     <label for="password_first">Password</label>
