fixed typo in reg_ko

--- a/source/reg_ko.html
+++ b/source/reg_ko.html
@@ -32,7 +32,7 @@
 {% block content %}
 <div>
 <h1>Cannot confirm registration for your team.</h1>
-If the error persist please contact us.
-</div>
+Perhaps you already confirmed your registration?
+If the error persists please contact us.</div>
 {% endblock %}
 
