--- a/source/scoreboard/level1.html
+++ b/source/scoreboard/level1.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="css/template.css" media="screen" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="js/script.js"></script>
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<link href="/css/template.css" media="screen" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/js/scoreboard.js"></script>
+	<script type="text/javascript" src="/js/jquery.js"></script>
 	<title>Poli CTF 2015</title>
 </head>
 <body>
 	<div id="sun">
-		<img src="images/sun.png" alt="sun">
+		<img src="/images/sun.png" alt="sun">
 	</div>
 	<div id="cloud1">
-		<img src="images/cloud.png" alt="cloud">
+		<img src="/images/cloud.png" alt="cloud">
 	</div>
 	<div id="cloud2">
-		<img src="images/cloud.png" alt="cloud">
+		<img src="/images/cloud.png" alt="cloud">
 	</div>
 	<div id="wrapper">
 		<div id="top">
@@ -46,28 +46,28 @@
 			</div>
 		</div>
 		<div id="block1" style="width: 204px; height: 61px; bottom: 78px;" class="challenge_layout1">
-			<a href="#" onclick="setVisibility('challenge1')"><img style="margin-left: 136px;" src="images/yellowchallenge.jpg" alt="challenge1">
+			<a href="#" onclick="setVisibility('challenge1')"><img style="margin-left: 136px;" src="/images/yellowchallenge.jpg" alt="challenge1">
 				<div id="challenge1" class="description" style="top: -100px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
 			</a>
 		</div>
 		<div id="block2" style="width: 204px; height: 183px; bottom: 78px; left: 390px;" class="challenge_layout1">
-			<a href="#" onclick="setVisibility('challenge2')"><img style="margin-left: 68px; margin-top: 0px;" src="images/yellowchallenge.jpg" alt="challenge2"></a>
+			<a href="#" onclick="setVisibility('challenge2')"><img style="margin-left: 68px; margin-top: 0px;" src="/images/yellowchallenge.jpg" alt="challenge2"></a>
 				<div id="challenge2" class="description" style="top: -100px; left: -50px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
-			<a href="#" onclick="setVisibility('challenge3')"><img style="margin-left: 136px; margin-top: 61px;" src="images/redchallenge.jpg" alt="challenge3"></a>
+			<a href="#" onclick="setVisibility('challenge3')"><img style="margin-left: 136px; margin-top: 61px;" src="/images/redchallenge.jpg" alt="challenge3"></a>
 				<div id="challenge3" class="description" style="top: 20px; left: 0px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
 		</div>
 		<div id="block3" style="width: 340px; height: 61px; top: 0; right: 0px; left: auto; bottom: 0; margin: auto;" class="challenge_layout1">
-			<a href="#" onclick="setVisibility('challenge4')"><img style="margin-left: 0px; margin-top: 0px;" src="images/greenchallenge.jpg" alt="challenge4"></a>
+			<a href="#" onclick="setVisibility('challenge4')"><img style="margin-left: 0px; margin-top: 0px;" src="/images/greenchallenge.jpg" alt="challenge4"></a>
 				<div id="challenge4" class="description" style="top: -100px; left: -140px; width: 100%;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
-			<a href="#" onclick="setVisibility('challenge5')"><img style="margin-left: 68px; margin-top: 0px;" src="images/redchallenge.jpg" alt="challenge5"></a>
+			<a href="#" onclick="setVisibility('challenge5')"><img style="margin-left: 68px; margin-top: 0px;" src="/images/redchallenge.jpg" alt="challenge5"></a>
 				<div id="challenge5" class="description" style="top: -100px; left: -13px; width: 100%;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
@@ -77,15 +77,15 @@
 		</div>
 		
 		<div id="block4" style="width: 204px; height: 61px; bottom: 78px; right: 200px;" class="challenge_layout1">
-			<a href="#" onclick="setVisibility('challenge6')"><img style="margin-left: 0px; margin-top: 0px;" src="images/bluechallenge.jpg" alt="challenge6"></a>
+			<a href="#" onclick="setVisibility('challenge6')"><img style="margin-left: 0px; margin-top: 0px;" src="/images/bluechallenge.jpg" alt="challenge6"></a>
 				<div id="challenge6" class="description" style="top: -100px; left: -145px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
-			<a href="#" onclick="setVisibility('challenge7')"><img src="images/bluechallenge.jpg" alt="challenge7"></a>
+			<a href="#" onclick="setVisibility('challenge7')"><img src="/images/bluechallenge.jpg" alt="challenge7"></a>
 				<div id="challenge7" class="description" style="top: -100px; left: -53px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
-			<a href="#" onclick="setVisibility('challenge8')"><img src="images/greenchallenge.jpg" alt="challenge8"></a>
+			<a href="#" onclick="setVisibility('challenge8')"><img src="/images/greenchallenge.jpg" alt="challenge8"></a>
 				<div id="challenge8" class="description" style="top: -100px; left: 15px;">
 					<strong>Challange title: </strong><p>watwatwatwatwatwatwatwat watwatwatwatwatwatwatwatwatwatwa twatwatwat watwatwatwatwatwatwat watwatwat</p>
 				</div>
