--- a/source/scoreboard/ranking.html
+++ b/source/scoreboard/ranking.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-	<link href="css/ranking.css" media="screen" rel="stylesheet" type="text/css">
-	<title>Poli CTF 2015 | Ranking</title>
+	<link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+	<link href="/css/ranking.css" media="screen" rel="stylesheet" type="text/css">
+	<title>PoliCTF 2015 | Rankings</title>
 </head>
 <body>
-	<div id="page-container" class="container-fluid">
+	<div class="container">
 		<div class="wrapper">
 			<div class="page-header">
 				<div class="col-md-12">
-					<h1>Poli CTF</h1>
+					<h1>PoliCTF</h1>
 				</div>
 			</div>
 			<table class="table">
@@ -26,28 +26,28 @@
 				</thead>
 			<tbody>
 			<tr>
-				<th><span class="num">1</span><span class="suffix">st</span></th>
+				<th><span class="num">1</span></th>
 				<td>ToH</td>
-				<td><div class="image-points"></div>x1000</td>
-				<td><div class="image-levels"></div>3/3</td>
+				<td><div class="image-points">1000</div></td>
+				<td><div class="image-levels">3/3</div></td>
 			</tr>
 			<tr>
-				<th><span class="num">2</span><span class="suffix">nd</span></th>
+				<th><span class="num">2</span></th>
 				<td>WE_0WN_Y0U</td>
-				<td><div class="image-points"></div>x800</td>
-				<td><div class="image-levels"></div>2/3</td>
+				<td><div class="image-points">800</div></td>
+				<td><div class="image-levels">2/3</div></td>
 			</tr>
 			<tr>
-				<th><span class="num">3</span><span class="suffix">rd</span></th>
+				<th><span class="num">3</span></th>
 				<td>Plaid Parliement of Pwning</td>
-				<td><div class="image-points"></div>x500</td>
-				<td><div class="image-levels"></div>2/3</td>
+				<td><div class="image-points">500</div></td>
+				<td><div class="image-levels">2/3</div></td>
 			</tr>
 			<tr>
-				<th><span class="num">4</span><span class="suffix">th</span></th>
+				<th><span class="num">4</span></th>
 				<td>More Smoked Leet Chicken</td>
-				<td><div class="image-points"></div>x300</td>
-				<td><div class="image-levels"></div>2/3</td>
+				<td><div class="image-points">300</div></td>
+				<td><div class="image-levels">2/3</div></td>
 			</tr>
 			</tbody>
 			</table>
