--- a/source/index.html
+++ b/source/index.html
@@ -71,6 +71,15 @@
             <br />
         </div>
         <div class="main-text">
+            <h3>Prizes!</h3>
+            <p><strong>First:</strong> 2 pairs of Oculus Rift (devkit 2)+ 15 RPi 2 Model B</p>
+            <p><strong>Second:</strong> Synology NAS + 15 RPi 2 Model B</p>
+            <p><strong>Third:</strong> 15 RPi 2 Model B</p>
+            <br />
+            <p>The prizes are kindly offered by our sponsor <a href="http://www.reply.eu/en/topics/security/">Reply Communication Valley</a>.</p>
+        </div>
+
+        <div class="main-text">
             <a href="registration.html"><h3>Registration is open!</h3></a>
         </div>
         <div class="center">
