--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
             <br />If you are interested in participating in person let us know at <a href="mailto:info@polictf.it">info@polictf.it</a>.
             <br />
         </div>
-        <div class="main-text">
+        <div class="main-text" id="prizes">
             <h3>Prizes!</h3>
             <p><strong>First:</strong> 2 pairs of Oculus Rift (devkit 2)+ 15 RPi 2 Model B</p>
             <p><strong>Second:</strong> Synology NAS + 15 RPi 2 Model B</p>
