--- a/source/index.html
+++ b/source/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="main-text" id="prizes">
             <h3>Prizes!</h3>
-            <p><strong>First:</strong> 2 pairs of Oculus Rift (devkit 2)+ 15 RPi 2 Model B</p>
+            <p><strong>First:</strong> 2x Oculus Rift (devkit 2)+ 15 RPi 2 Model B</p>
             <p><strong>Second:</strong> Synology NAS + 15 RPi 2 Model B</p>
             <p><strong>Third:</strong> 15 RPi 2 Model B</p>
             <br />
