add note of confirmation

--- a/source/registration.html
+++ b/source/registration.html
@@ -10,8 +10,8 @@
 <div class="row marginbottom">
     <div class="col-xs-12 col-sm-12 col-md-7">
         <div class="main-text">
-          Competition will start in:
           <center>
+          Competition will start in:
            <h3>
               <div><script>
               TargetDate = "07/10/2015 9:00 AM GMT";
@@ -28,6 +28,7 @@
 
               <script language="JavaScript" src="js/countdown.js"></script></div>
             </h3>
+
           </center>
         </div>
     </div>
@@ -76,9 +77,10 @@
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default">Submit</button>
+                <div class="form-group clearfix">
+                    <button type="submit" class="btn btn-default pull-right">Submit</button>
                 </div>
+                <div class="small">(please note that a confirmation mail will be sent, and you'll need to confirm your account)</div>
             </form>
             <div class="form-group">
                 <div id="messages"></div>
