--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,10 @@
 {% endblock %}
 
 {% block content %}
+<div class="row maintext">
+            PoliCTF 2015 is a jeopardy style capture-the-flag competition that will be held both online and open to all competitors and live for a restricted number of participants. The competition will start during the second day of the <a href="http://dimva2015.it">DIMVA 2015</a> conference that will be held in Milan (Italy) at <b>10/07/2015 09:00 UTC </b> and will last for <b>48 hours</b>.
+            Our official communication channel is #polictf on <a href="http://hackint.eu">hackint</a> irc network.
+</div>
 <div class="row marginbottom">
     <div class="col-xs-12 col-sm-12 col-md-7 demo_block">
         <div class="col-xs-12" id="democanvas"></div>
@@ -41,10 +45,11 @@
                 <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Fullscreen
             </button>
         </div>
+
     </div>
+
     <div class="col-xs-12 col-sm-12 col-md-5 main_block">
         <div class="main-text">
-            PoliCTF 2015 is a jeopardy style capture-the-flag competition that will be held both online and open to all competitors and live for a restricted number of participants. The competition will start during the second day of the <a href="http://dimva2015.it">DIMVA 2015</a> conference that will be held in Milan (Italy) at <b>10/07/2015 09:00 UTC </b> and will last for <b>48 hours</b>.
             Competition will start in:
         <center>
          <h3>
@@ -70,6 +75,11 @@
             <br />If you are interested in participating in person let us know at <a href="mailto:info@polictf.it">info@polictf.it</a>.
             <br />
         </div>
+
+        <div class="main-text">
+            <a href="registration.html"><h3>Registration is open!</h3></a>
+        </div>
+
         <div class="main-text" id="prizes">
             <h3>Prizes!</h3>
             <p><strong>First:</strong> 2x Oculus Rift (devkit 2)+ 15 RPi 2 Model B</p>
@@ -79,9 +89,6 @@
             <p>The prizes are kindly offered by our sponsor <a href="http://www.reply.eu/en/topics/security/">Reply Communication Valley</a>.</p>
         </div>
 
-        <div class="main-text">
-            <a href="registration.html"><h3>Registration is open!</h3></a>
-        </div>
         <div class="center">
             <h2>Sponsors</h2>
             <div class="main-text">
@@ -98,9 +105,10 @@
                 </a>
             </div>
             </div>
+            </div>
         </div>
+
      </div>
-    </div>
 </div>
 {% endblock %}
 
